[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "biomero"
dynamic = ["version"]
authors = [
    { name = "Torec Luik", email = "t.t.luik@amsterdamumc.nl" },
    { name = "Core Facility - Cellular Imaging" },
    { email = "cellularimaging@amsterdamumc.nl"}
]
description = "A python library for easy connecting between OMERO (jobs) and a Slurm cluster"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["omero", "slurm", "high-performance-computing", "fair", "image-analysis", "bioimaging", "high-throughput-screening", "high-content-screening", "cytomine", "biomero", "biaflows"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.4",
    "requests-cache==1.1.1",
    "fabric==3.1.0",
    "paramiko==3.4.0",
    "importlib_resources>=5.4.0",
    "eventsourcing==9.3",
    "sqlalchemy==2.0.32",
    "eventsourcing_sqlalchemy==0.9"
    # psycopg2>=2.9,<3.0, omero-py, zeroc-ice via conda in pixi
    # biomero-schema from GitHub via pixi
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters
[tool.setuptools.package-data]
biomero = []


[tool.setuptools_scm]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "mock"
]
full = [
    "ezomero>=1.1.1",
    "tifffile>=2020.9.3",
    "omero-metadata>=0.12.0"
    # psycopg2, omero-py, zeroc-ice via conda in pixi
    # biomero-schema will be added once it's on PyPI
]

[project.urls]
"Homepage" = "https://github.com/NL-BioImaging/biomero"
"Documentation" = "https://nl-bioimaging.github.io/biomero/"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
zeroc-ice = "<3.7"
omero-py = "*"
psycopg2 = ">=2.9.9,<3.0"

[tool.pixi.pypi-dependencies]
biomero = { path = ".", editable = true, extras = ["full"] }
biomero-schema = { git = "https://github.com/BioImageTools/biomero-schema.git" }

[tool.pixi.feature.test.pypi-dependencies]
pytest = "*"
pytest-cov = "*"
mock = "*"
flake8 = "*"
psycopg2-binary = "*"

[tool.pixi.feature.py310.dependencies]
python = ">=3.10,<3.11"

[tool.pixi.feature.py311.dependencies]
python = ">=3.11,<3.12"

[tool.pixi.feature.py312.dependencies]
python = ">=3.12,<3.13"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
py310 = { features = ["test", "py310"], solve-group = "py310" }
py311 = { features = ["test", "py311"], solve-group = "py311" }
py312 = { features = ["test", "py312"], solve-group = "py312" }

[tool.pixi.tasks]
test = "pytest tests/unit/"
test-cov = "pytest tests/unit/ --cov=biomero --cov-report=term-missing"
lint = "flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics"
lint-full = "flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics"
