[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "biomero"
dynamic = ["version"]
authors = [
    { name = "Torec Luik", email = "t.t.luik@amsterdamumc.nl" },
    { name = "Core Facility - Cellular Imaging" },
    { email = "cellularimaging@amsterdamumc.nl"}
]
description = "A python library for easy connecting between OMERO (jobs) and a Slurm cluster"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["omero", "slurm", "high-performance-computing", "fair", "image-analysis", "bioimaging", "high-throughput-screening", "high-content-screening", "cytomine", "biomero", "biaflows"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.32.4",
    "requests-cache==1.1.1",
    "fabric==3.1.0",
    "paramiko==3.4.0",
    "importlib_resources>=5.4.0",
    "eventsourcing==9.3",
    "sqlalchemy==2.0.32",
    "psycopg2==2.9.9",
    "eventsourcing_sqlalchemy==0.9"
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters
[tool.setuptools.package-data]
biomero = []


[tool.setuptools_scm]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "mock",
    "flake8",
    "psycopg2-binary"
]
full = [
    "ezomero>=1.1.1",
    "tifffile>=2020.9.3",
    "omero-metadata>=0.12.0",
    "omero-cli-zarr>=0.6.1"
]

[project.urls]
"Homepage" = "https://github.com/NL-BioImaging/biomero"
"Documentation" = "https://nl-bioimaging.github.io/biomero/"
