[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "biomero"
dynamic = ["version"]
authors = [
    { name = "Torec Luik", email = "t.t.luik@amsterdamumc.nl" },
    { name = "Core Facility - Cellular Imaging" },
    { email = "cellularimaging@amsterdamumc.nl"}
]
description = "A python library for easy connecting between OMERO (jobs) and a Slurm cluster"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["omero", "slurm", "high-performance-computing", "fair", "image-analysis", "bioimaging", "high-throughput-screening", "high-content-screening", "cytomine", "biomero", "biaflows"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.34.2",
    "requests-cache==1.3.2",
    "fabric==3.2.3",
    "paramiko==4.0.0",
    "importlib_resources>=7.1.0",
    "eventsourcing==9.5.4",
    "sqlalchemy==2.0.50",
    "psycopg2==2.9.12",
    "eventsourcing_sqlalchemy==1.0.1",
    "pyyaml==6.0.3",
    "biomero-schema @ git+https://github.com/BioImageTools/biomero-schema.git@dev-bilayers"
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters
[tool.setuptools.package-data]
biomero = []


[tool.setuptools_scm]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "mock",
    "flake8",
    "psycopg2-binary>=2.9.12"
]
full = [
    "ezomero==1.1.1",
    "tifffile==2020.9.3",
    "omero-metadata==0.12.0",
    "omero-cli-zarr==0.8.0",
    "ome-zarr==0.14.0",
    "zarr==3.1.5",
    "numpy<2.0",
    "omero-upload==0.4.0"
]

[project.urls]
"Homepage" = "https://github.com/NL-BioImaging/biomero"
"Documentation" = "https://nl-bioimaging.github.io/biomero/"
